# Simpler_Black_Hole_Variants

./: .gitignore  CMakeLists.txt
lib/libsmartheap/: CMakeLists.txt
lib/libsmartheap/include/smartheap/: heap.hpp  smartheap.hpp
lib/libsmartheap/src/: heap.cpp  heap_utils.cpp
src/2d_bh_sim/: CMakeLists.txt  bh.hpp  config.h  engine.hpp  main.cpp  main.hpp
src/3d_bh_sim/: CMakeLists.txt
src/3d_bh_sim_binary/: CMakeLists.txt  main.cpp
src/3d_bh_sim_smartheap/: CMakeLists.txt
src/basic_opengl_tutorial/: CMakeLists.txt  main.cpp
